# ML-Studio

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: main.cpp
src/audio/io/: AudioIO.cpp  AudioIO.h
src/audio/midi/: MIDI.cpp  MIDI.h
src/audio/processing/: Compressor.cpp  Compressor.h  Delay.cpp  Delay.h  EQ.cpp  EQ.h  FX.h  Filter.cpp  Filter.h  Reverb.cpp  Reverb.h
src/core/engine/: AudioEngine.cpp  AudioEngine.h
src/core/mixer/: Mixer.cpp  Mixer.h
src/core/track/: Clip.cpp  Clip.h  Track.cpp  Track.h
src/core/transport/: Transport.cpp  Transport.h
src/dialogs/: ExportDialog.cpp  ExportDialog.h  PreferencesDialog.cpp  PreferencesDialog.h
src/plugins/host/: PluginHost.cpp  PluginHost.h
src/plugins/host/clap/: CLAPHost.cpp  CLAPHost.h
src/plugins/host/lv2/: LV2Host.cpp  LV2Host.h
src/plugins/host/vst3/: VST3Host.cpp  VST3Host.h
src/project/: Project.cpp  Project.h  ProjectLoader.cpp  ProjectLoader.h  ProjectSaver.cpp  ProjectSaver.h
src/ui/mainwindow/: MainWindow.cpp  MainWindow.h
src/ui/mixer/: MixerWidget.cpp  MixerWidget.h
src/ui/pianoroll/: PianoRollWidget.cpp  PianoRollWidget.h
src/ui/pluginbrowser/: PluginBrowserWidget.cpp  PluginBrowserWidget.h
src/ui/timeline/: TimelineWidget.cpp  TimelineWidget.h
src/ui/transport/: TransportWidget.cpp  TransportWidget.h
src/utils/: FileUtils.cpp  FileUtils.h  MathUtils.cpp  MathUtils.h
